--- a/HaveASeat-frontend/src/app/components/rightside/rightside.component.html
+++ b/HaveASeat-frontend/src/app/components/rightside/rightside.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="space_haver"></div>
     <div class="legends" *ngIf="pageSwitch != 2">
-      <p class="legends_text">Legenda</p>
+      <p class="legends_text">Legenda: </p>
       <div class="legends_descriptions">
         <div class="legend-item">
           <div class="square free"></div>
