--- a/HaveASeat-frontend/src/app/components/rightside/rightside.component.scss
+++ b/HaveASeat-frontend/src/app/components/rightside/rightside.component.scss
@@ -74,28 +74,33 @@
 }
 
 .legends {
-    margin-top: 15px;
-    margin-right: 100px;
-    float: right;
+    margin-top: 3%;
+    margin-left: 8%;
+    display: flex;
+    font-size: 1.6ch;
+    width: 100%;
 }
-
+.legends_descriptions{
+    display: flex;
+}
 .legends_text {
-    margin-bottom: 10px;
-    font-weight: bold;
-    text-align: center;
-    font-family: sans;
+    display: inline-block;
+    margin-top: 7px;
 }
 
 .legend-item {
     display: flex;
-    align-items: center;
     margin-bottom: 5px;
+    margin-top: 2%;
+    margin-left: 2%;
+    width: 8vw;
 }
 
 .square {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
+    width: 15px;
+    height: 15px;
+    margin-left: 2%;
+    margin-right: 3%;
 }
 
 .free {
