--- a/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
+++ b/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
@@ -27,10 +27,7 @@ ul li:last-child {
     border-bottom: none;
 }
 
-.highlighted {
+#this_user {
     font-weight: bold;
 }
 
-.highlighted::before {
-    content: "(Ja) ";
-}
