--- a/HaveASeat-frontend/src/app/components/editor/editor.component.html
+++ b/HaveASeat-frontend/src/app/components/editor/editor.component.html
@@ -1,4 +1,3 @@
-<div>
-    <app-header [userId]="userId" [pageSwitch]="1"></app-header>
-    <app-editor-map></app-editor-map>
+<div id="all_elements">
+    <app-editor-map id="mapka" [userId]="userId"></app-editor-map>
 </div>
