--- a/HaveASeat-frontend/src/app/components/rightside/rightside.component.scss
+++ b/HaveASeat-frontend/src/app/components/rightside/rightside.component.scss
@@ -6,7 +6,8 @@
 
 
 .content-container{
-    display: block;
+    display: flex;
+    flex-direction: column;
     border-left:2px solid #BBC1C9;
     height: 100%;
     width: 100%;
@@ -17,6 +18,11 @@
 #list{
     margin-left: 40%;
     margin: auto;
+}
+
+.instruction-legends-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .date_with_text {
@@ -115,3 +121,13 @@
     background-color: #00A3FF;
 }
 
+.day-description {
+    background-color: white;
+    width: 350px;
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 5px;
+    margin-left: 6%;
+    margin-top: 4%;
+    font-size: 2.3ch;
+}
