--- a/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.scss
+++ b/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.scss
@@ -8,6 +8,10 @@
     border: 5px #E6EAED solid;
     border-radius: 15px;
     padding: 15px;
+    float: left;
+}
+#prawa{
+    float: right;
 }
 
 #add-dates {
