--- a/HaveASeat-frontend/src/app/components/rightside/rightside.component.html
+++ b/HaveASeat-frontend/src/app/components/rightside/rightside.component.html
@@ -2,12 +2,15 @@
   <span *ngIf="pageSwitch == 1">
   <app-header id="header" [userId]="userId" [pageSwitch]="1"></app-header>
   </span>
-  <span *ngIf="pageSwitch != 1">
+  <span *ngIf="pageSwitch == 0">
     <app-header id="header" [userId]="userId" [pageSwitch]="0"></app-header>
     </span>
+    <span *ngIf="pageSwitch == 2">
+      <app-header id="header" [userId]="userId" [pageSwitch]="2"></app-header>
+      </span>
   <div class="space_haver"></div>
   <div class="instruction-legends-container">
-    <div id="instructions_div" *ngIf="pageSwitch != 1">
+    <div id="instructions_div" *ngIf="pageSwitch == 0">
       <div class="first_step_text">
         <p class="number_for_instruction">1</p>
         <p class="reservation_date">Wybierz datę rezerwacji </p>
@@ -21,7 +24,7 @@
           [value]="today" [min]="today" /></p>
       </div>
     </div>
-    <app-user-list [this_user]="username + ' ' + usersurname" id="list" *ngIf="description == '' && pageSwitch != 1"></app-user-list>
+    <app-user-list [this_user]="username + ' ' + usersurname" id="list" *ngIf="description == '' && pageSwitch == 0"></app-user-list>
     <div class="day-description" *ngIf="description != ''">
       Dzień wolny: {{description}}
     </div>
