--- a/HaveASeat-frontend/src/app/components/header/header.component.html
+++ b/HaveASeat-frontend/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
   <div id="filler"></div>
   <div id="profile" (click)="toggleDropdown()">
     <div id="user">
-      <img id="img_prof" src="assets/images/avatar.png" alt="User avatar">
+      <img id="img_prof" src="assets/images/jan.png" alt="User avatar">
       <p id="username"> {{username}} {{usersurname}}</p>
       <img id="img_arr" src="assets/images/arrow_drop.png" alt="arrow drop">
     </div>
