minor issue fixed
so i dont have to push it all later

--- a/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
+++ b/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
@@ -6,7 +6,7 @@
     border-radius: 5px;
     overflow-y: auto;
     max-height: 55vh;
-    margin-left: 6%;
+    margin-right: 4%;
     margin-top: 4%;
     font-size: 1.8ch;
 }
