--- a/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.scss
+++ b/HaveASeat-frontend/src/app/components/admin-dates/admin-dates.component.scss
@@ -13,7 +13,10 @@
 #prawa{
     float: right;
 }
-
+app-rightside{
+    height: 98vh;
+    
+}
 #add-dates {
     display: flex;
     flex-direction: column;
