--- a/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
+++ b/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
@@ -10,7 +10,15 @@
     margin-top: 4%;
     font-size: 1.8ch;
 }
-
+#button_delete{
+    border: none;
+    background-color: white;
+    float: right;
+    #picture_delete:hover{
+        cursor: pointer;
+        filter: brightness(0) saturate(100%) invert(77%) sepia(67%) saturate(1264%) hue-rotate(176deg) brightness(80%) contrast(80%);
+    }
+}
 ul {
     margin-top: 1%;
     padding: 0;
