--- a/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
+++ b/HaveASeat-frontend/src/app/components/user-list/user-list.component.scss
@@ -5,7 +5,7 @@
     padding: 5px;
     border-radius: 5px;
     overflow-y: auto;
-    max-height: 55vh;
+    height: 55vh;
     margin-right: 4%;
     margin-top: 4%;
     font-size: 1.8ch;
