--- a/HaveASeat-frontend/src/app/components/mapa/mapa.component.scss
+++ b/HaveASeat-frontend/src/app/components/mapa/mapa.component.scss
@@ -19,8 +19,8 @@
 
 .place {
   
-  height: 50px;
-  width: 50px;
+  height: 7.3vh;
+  width: 3.6vw;
   display: flex;
   position: relative;
   box-sizing: border-box;
