scaling works i think?+ minor issues fixed

--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
@@ -13,7 +13,7 @@
     gap: 0px;
     padding: 20px;
     margin: 20px;
-    background-color: #E6EAED;
+    //background-color: #E6EAED;
     justify-content: center;
     flex-wrap: wrap;
     grid-template-columns: 1fr;
@@ -31,7 +31,7 @@
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
-    background-color: #E6EAED;
+    background-color: #ffffff;
     border-collapse: collapse;
   }
   
