--- a/HaveASeat-frontend/src/app/components/main/main.component.scss
+++ b/HaveASeat-frontend/src/app/components/main/main.component.scss
@@ -11,6 +11,8 @@
     height: 98vh;
     width: 20% ;
     border-left: 2px #D5D8DC solid;
+    box-sizing: border-box;
+
 }
 #stronka{
     width: 100vw;
