--- a/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
+++ b/HaveASeat-frontend/src/app/components/editor-map/editor-map.component.scss
@@ -24,8 +24,8 @@
   
   .place {
     
-    height: 50px;
-    width: 50px;
+    height: 7.3vh;
+  width: 3.6vw;
     display: flex;
     position: relative;
     box-sizing: border-box;
